[package]
name = "rafka"
version = "0.1.0"
authors = ["Seb Ospina <kraige@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rafka_core]
path = "../rafka_core"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2.0"
