[package]
name = "rafka"
version = "0.1.0"
authors = ["Seb Ospina <kraige@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rafka_core]
path = "../rafka_core"

[dependencies]
tokio = { version = "1", features = ["full"]}
tracing = "0.1.22"
tracing-subscriber = "0.3"
clap = "2.33.3"
