[package]
name = "rafka"
version = "0.1.0"
authors = ["Seb Ospina <kraige@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rafka_core]
path = "../rafka_core"

[dependencies]
tokio = { version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
