[package]
name = "rafka_core"
version = "0.1.0"
authors = ["Seb Ospina <kraige@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2.7.0"
slog-term = "2.6.0"
futures = "0.3.8"
tokio = { version = "1", features = ["full"] }
failure = "0.1"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.1", features = ["env_logger"] }
tracing-attributes = "0.1"
java-properties = "1.3"
env_logger = "0.9"
test-env-log = "0.2"
zookeeper-async = "4.0.0"
thiserror = "1.0"
fs-err = "2.5"
bytes = "1.0"
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
base64 = "0.13"
regex = "1"
lazy_static = "1.4"

[dependencies.rafka_derive]
path = "../rafka_derive"

[dev-dependencies]
test-env-log = { version = "0.2", features = ["trace"] }
env_logger = "0.8"
tracing-subscriber = { version = "0.2", features = ["chrono", "env-filter", "fmt"] }
