[package]
name = "rafka_core"
version = "0.1.0"
authors = ["Seb Ospina <kraige@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
java-properties = "2.0"
zookeeper-async = "4.0.0"
thiserror = "1.0"
fs-err = "2.5"
bytes = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1.0"
uuid = { version = "1.3", features = ["serde", "v4"] }
base64 = "0.21"
regex = "1"
lazy_static = "1.4"
enum-iterator = "1.4"
itertools = "0.10"
const_format = "0.2"
file-lock = "2.1"

[dependencies.rafka_derive]
path = "../rafka_derive"

[dev-dependencies]
test-log = { version = "0.2", features = ["trace"] }
env_logger = "0.10"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
